Correction to overly-tight list spacing introduced by last changes.

--- a/docs/src/css/libsbml-base-stylesheet.css
+++ b/docs/src/css/libsbml-base-stylesheet.css
@@ -114,6 +114,8 @@ ul
 
 ul li
 {
+    margin-top: 0.75em;
+    margin-bottom: 0.75em;
 }
 
 ul li p
